se tiene la pagina formulario

--- a/formulario.html
+++ b/formulario.html
@@ -7,18 +7,37 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-            <ul>
-                <li><a href="inicio.html">Servicios</li></a>
-                <li><a href="contactos.html">Aliados</li></a>
-                <li><a href="formulario.html">Soporte</li></a>
-            </ul>
-    </nav>
-    <main>
-        <h2>Centro de ayuda</h2>
-        <fieldset>
-            <legend>Completa este formulario para que podamos ayudarte lo antes posible.</legend>
-            <input type="radio" name="soporte" id="problem1" value="carga-de-pag">
-        </fieldset>
-    </main>
+<div class="starting">
+ <div class="imglogo"><img src="img/startin_logo.png" alt="startin_logo"></div>
+ <h2 class="titulo">Acceso startianos</h2>
+ <p class="ingresa_datos"><strong>INGRESA TUS DATOS</strong></p>
+ <br>
+ <br>
+ <form class="form">
+    <label for="usuario"><img src="img/usuario.png" alt="usuario"></label>
+    <input type="text" name="nombre" id="usuario" placeholder="Ingrese su nombre">
+    <br>
+    <label for="correo"><img src="img/correo.png" alt="correo"></label>
+    <input type="email" name="email" id="correo" placeholder="jruiz@mail.com">
+    <br>
+    <label for="contraseña"><img src="img/contraseña.png" alt="contraseña"></label>
+    <input type="password" name="clave" id="contraseña" placeholder="***********">
+ </form>
+ <br>
+ <a href="inicio.html"><span class="ingresarTag">INGRESAR</span></a>
+ <br>
+ <br>
+ <br>
+ <br>
+ <div class="oc">
+ <img src="img/olvidaste_contraseña.png" alt="oc"><p><strong>¿OLVIDASTE TU CONTRASEÑA?</strong></p>
+</div>
+</div> 
+<div class="imgformulario"><img src="img/formulario.png" alt=""></div>
+<br>
+<br>
+<footer>
+    Todos los derechos reservados <strong>AMERICAN CAPITAL S.A.S</strong>
+    </footer>
 </body>
+</html>
