--- a/formulario.html
+++ b/formulario.html
@@ -1,43 +1,53 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de ingreso</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="./index.js"></script>
 </head>
+
 <body>
-<div class="starting">
- <div class="imglogo"><img src="img/startin_logo.png" alt="startin_logo"></div>
- <h2 class="titulo">Acceso startianos</h2>
- <p class="ingresa_datos"><strong>INGRESA TUS DATOS</strong></p>
- <br>
- <br>
- <form class="form">
-    <label for="usuario"><img src="img/usuario.png" alt="usuario"></label>
-    <input type="text" name="nombre" id="usuario" placeholder="Ingrese su nombre">
+    <div class="starting">
+        <div class="imglogo"><img src="img/startin_logo.png" alt="startin_logo"></div>
+        <h2 class="titulo">Acceso startianos</h2>
+        <p class="ingresa_datos"><strong>INGRESA TUS DATOS</strong></p>
+        <br>
+        <br>
+        <form class="form">
+            <label for="usuario"><img src="img/usuario.png" alt="usuario"></label>
+            <input type="text" name="nombre" id="usuario" placeholder="Ingrese su nombre">
+            <br>
+            <label for="correo"><img src="img/correo.png" alt="correo"></label>
+            <input type="email" name="email" id="correo" placeholder="jruiz@mail.com">
+            <br>
+            <label for="contraseña"><img src="img/contraseña.png" alt="contraseña"></label>
+            <input type="password" name="clave" id="contraseña" placeholder="***********">
+        </form>
+        <br>
+        <div class="botones">
+            <a id="ingresar" href="#"><span class="ingresarTag">INGRESAR</span></a>
+            <a id="consultar" href="#"><span class="ingresarTag">CONSULTAR</span></a>
+            <a id="eliminar" href="#"><span class="ingresarTag">ELIMINAR</span></a>
+            <a id="editar" href="#"><span class="ingresarTag">EDITAR</span></a>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="oc">
+            <img src="img/olvidaste_contraseña.png" alt="oc">
+            <p><strong>¿OLVIDASTE TU CONTRASEÑA?</strong></p>
+        </div>
+    </div>
+    <div class="imgformulario"><img src="img/formulario.png" alt=""></div>
     <br>
-    <label for="correo"><img src="img/correo.png" alt="correo"></label>
-    <input type="email" name="email" id="correo" placeholder="jruiz@mail.com">
     <br>
-    <label for="contraseña"><img src="img/contraseña.png" alt="contraseña"></label>
-    <input type="password" name="clave" id="contraseña" placeholder="***********">
- </form>
- <br>
- <a href="inicio.html"><span class="ingresarTag">INGRESAR</span></a>
- <br>
- <br>
- <br>
- <br>
- <div class="oc">
- <img src="img/olvidaste_contraseña.png" alt="oc"><p><strong>¿OLVIDASTE TU CONTRASEÑA?</strong></p>
-</div>
-</div> 
-<div class="imgformulario"><img src="img/formulario.png" alt=""></div>
-<br>
-<br>
-<footer>
-    Todos los derechos reservados <strong>AMERICAN CAPITAL S.A.S</strong>
+    <footer>
+        Todos los derechos reservados <strong>AMERICAN CAPITAL S.A.S</strong>
     </footer>
 </body>
+
 </html>
