--- a/inicio.html
+++ b/inicio.html
@@ -13,8 +13,8 @@
     </a>
     <nav>
         <ul class="navegacion">
-            <li><img src="img/home.png" alt=""><a href="inicio.html">Servicios</li></a>
-            <li><img src="img/aliados.png" alt=""><a href="contactos.html">Aliados</li></a>
+            <li><img src="img/home.png" alt=""><a href="inicio.html">Inicio</li></a>
+            <li><img src="img/aliados.png" alt=""><a href="contactos.html">Servicios</li></a>
             <li><img src="img/soporte.png" alt=""><a href="formulario.html">Soporte</li></a>
         </ul>
         <div class="clientesTag">Clientes</div>
