Botones con Alert

--- a/formulario.html
+++ b/formulario.html
@@ -21,7 +21,7 @@
             <input type="text" name="nombre" id="usuario" placeholder="Ingrese su nombre">
             <br>
             <label for="correo"><img src="img/correo.png" alt="correo"></label>
-            <input type="email" name="email" id="correo" placeholder="jruiz@mail.com">
+            <input type="email" name="email" id="correo" placeholder="tuemail@mail.com">
             <br>
             <label for="contraseña"><img src="img/contraseña.png" alt="contraseña"></label>
             <input type="password" name="clave" id="contraseña" placeholder="***********">
