se creo pagina de ingreso y se agregaron estilos para el boton

--- a/formulario.html
+++ b/formulario.html
@@ -28,7 +28,7 @@
         </form>
         <br>
         <div class="botones">
-            <a id="ingresar" href="#"><span class="ingresarTag">INGRESAR</span></a>
+            <a id="ingresar" href="ingreso.html"><span class="ingresarTag">INGRESAR</span></a>
             <a id="consultar" href="#"><span class="ingresarTag">CONSULTAR</span></a>
             <a id="eliminar" href="#"><span class="ingresarTag">ELIMINAR</span></a>
             <a id="editar" href="#"><span class="ingresarTag">EDITAR</span></a>
