--- a/ingreso.html
+++ b/ingreso.html
@@ -7,41 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
     <body>
-        <div class="starting">
+        <div class="starting-ingreso">
             <div class="imglogo"><img src="img/startin_logo.png" alt="startin_logo"></div>
-            <h2 class="titulo">Acceso startianos</h2>
-            <p class="ingresa_datos"><strong>INGRESA TUS DATOS</strong></p>
+            <h2>No pudiste acceder, vuelve a intentarlo de nuevo.</h2>
             <br>
-            <br>
-            <form class="form">
-                <label for="usuario"><img src="img/usuario.png" alt="usuario"></label>
-                <input type="text" name="nombre" id="usuario" placeholder="Ingrese su nombre">
-                <br>
-                <label for="correo"><img src="img/correo.png" alt="correo"></label>
-                <input type="email" name="email" id="correo" placeholder="tuemail@mail.com">
-                <br>
-                <label for="contraseña"><img src="img/contraseña.png" alt="contraseña"></label>
-                <input type="password" name="clave" id="contraseña" placeholder="***********">
-            </form>
-            <br>
-            <div class="botones">
-                <a id="ingresar" href="#"><span class="ingresarTag">INGRESAR</span></a>
-                <a id="consultar" href="#"><span class="ingresarTag">CONSULTAR</span></a>
-                <a id="eliminar" href="#"><span class="ingresarTag">ELIMINAR</span></a>
-                <a id="editar" href="#"><span class="ingresarTag">EDITAR</span></a>
-            </div>
-            <br>
-            <br>
-            <br>
-            <br>
-            <div class="oc">
-                <img src="img/olvidaste_contraseña.png" alt="oc">
-                <p><strong>¿OLVIDASTE TU CONTRASEÑA?</strong></p>
-            </div>
+            <nav>
+                <ul class="navegacion">
+                    <li><a href="formulario.html" class="boton">Volver a formulario</li></a>
+                </ul>
+            </nav>
         </div>
-        <div class="imgformulario"><img src="img/formulario.png" alt=""></div>
-        <br>
-        <br>
         <footer>
             Todos los derechos reservados <strong>AMERICAN CAPITAL S.A.S</strong>
         </footer>
