se creo consultar

--- a/formulario.html
+++ b/formulario.html
@@ -30,9 +30,9 @@
             <br>
             <div class="botones">
                 <a id="ingresar" href="ingreso.html"><span class="ingresarTag">INGRESAR</span></a>
-                <a id="consultar" href="#"><span class="ingresarTag">CONSULTAR</span></a>
-                <a id="eliminar" href="#"><span class="ingresarTag">ELIMINAR</span></a>
-                <a id="editar" href="#"><span class="ingresarTag">EDITAR</span></a>
+                <a id="consultar" href="consultar.html"><span class="ingresarTag">CONSULTAR</span></a>
+                <a id="eliminar" href="eliminar.html"><span class="ingresarTag">ELIMINAR</span></a>
+                <a id="editar" href="editar.html"><span class="ingresarTag">EDITAR</span></a>
             </div>
             <br>
             <br>
