--- a/basedatos.html
+++ b/basedatos.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>Document</title>
+
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -18,26 +19,17 @@
                 <li><img src="img/home.png" alt=""><a href="inicio.html">Inicio</li></a>
                 <li><img src="img/aliados.png" alt=""><a href="contactos.html">Servicios</li></a>
                 <li><img src="img/soporte.png" alt=""><a href="formulario.html">Soporte</li></a>
-                <li><a href="basedatos.html">BaseDatos</li></a>
             </ul>
             <div class="clientesTag">Clientes</div>
         </nav>
     </header>
-    <hr>
     <main>
-        <img src="img/AI.png" alt="AI">
-        <div class="subMenu">
-            <ul>
-                <li>ACERCA DE AMERICAN CAPITAL</li>
-                <li>SEGURIDAD</li>
-                <li>POLÍTICA DE SEGURIDAD</li>
-            </ul>
-        </div>
+        <img src="img/bd.png" alt="">
+
     </main>
     <footer>
         Todos los derechos reservados <strong>AMERICAN CAPITAL S.A.S</strong>
     </footer>
-
 </body>
 
 </html>
