Add link to logo in formulario.html for navigation

--- a/formulario.html
+++ b/formulario.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="contenedorForm">
-            <div class="imglogo"><img src="img/startin_logo.png" alt="startin_logo"></div>
+            <div class="imglogo"><a href="inicio.html"><img src="img/startin_logo.png" alt="startin_logo"></a></div>
             <h2 class="titulo">Acceso startianos</h2>
             <p class="ingresa_datos"><strong>INGRESA TUS DATOS</strong></p>
             <br>
