Refactor formulario.html and style.css for improved structure and styling

--- a/formulario.html
+++ b/formulario.html
@@ -11,6 +11,7 @@
 
 <body>
     <div class="contenedorForm">
+        <div class="starting">
             <div class="imglogo"><a href="inicio.html"><img src="img/startin_logo.png" alt="startin_logo"></a></div>
             <h2 class="titulo">Acceso startianos</h2>
             <p class="ingresa_datos"><strong>INGRESA TUS DATOS</strong></p>
@@ -42,7 +43,8 @@
                 <p><strong>¿OLVIDASTE TU CONTRASEÑA?</strong></p>
             </div>
         </div>
-        <div class="imgformulario"><img src="img/formulario.png" alt=""></div>
+        <div class="imgformulario"><a href="inicio.html"><img src="img/formulario.png" alt="imagen"></a></div>
+    </div>
 
     </div>
     <br>
