--- a/formulario.html
+++ b/formulario.html
@@ -13,7 +13,7 @@
     <div class="contenedorForm">
         <div class="starting">
             <div class="imglogo"><a href="inicio.html"><img src="img/startin_logo.png" alt="startin_logo"></a></div>
-            <h2 class="titulo">Acceso startianos</h2>
+            <h2 class="titulo">Acceso usuarios</h2>
             <p class="ingresa_datos"><strong>INGRESA TUS DATOS</strong></p>
             <br>
             <br>
