--- a/inicio.html
+++ b/inicio.html
@@ -20,7 +20,7 @@
                 <li><img src="img/soporte.png" alt=""><a href="formulario.html">Soporte</li></a>
                 <li><a href="basedatos.html">BaseDatos</li></a>
                 <li>
-                    <img src="/img/console.png" alt="Ahorcado" /><a href="ahorcado.html">Ahorcado</a>
+                    <img src="img/console.png" alt="Ahorcado" /><a href="ahorcado.html">Ahorcado</a>
                 </li>
             </ul>
             <div class="clientesTag">Clientes</div>
